--- a/views/about.ejs
+++ b/views/about.ejs
@@ -130,13 +130,39 @@
             </div>
 
         </div>
+        <div class="speciality">
+            <div class="speciality-header">
+                Area of Expertise
+            </div>
+            <div class="speciality-body">
+                <div class="row">
+                    <div class="col">
+                        <h4>Algorithm Design.</h4>
+                        <p>I have developed a keen eye for detail and a knack for designing alogithms to efficiently solve Algorithmic based challenges. I am also experienced in working with large data sets and have a good understanding of computational
+                            complexity.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <h4>Software Dev. (Fullstack).</h4>
+                        <p>Probably can't say everything about my Software Development Skills, but i have been building scalable softwares ranging from Mobile, Web! and Desktop applications for over 5years, i have a knack of making my frontend design close
+                            to perfect, same goes with implementing backend functionalities, i have a handful of technical skills when working with Python Flasl/FastApi & NodeJs for API Development, ReactJS,NextJS ReactNative, (quite a number of them,
+                            *js frameworks*), Cloud Platforms like, Azure, Linode and Heroku.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <h4> Machine Learning Dev.</h4>
+                        <p>Building ML Alogrithms and ML Models is an aspect of programming, that comes relatively easy to me. I have developed various Ml algorithms, feature selection process and models to solve predetermined challenges, seemseslly developed
+                            APIs to carry out cross platform implementations, also participated in various research projects relating to the AI field.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
     </div>
-    <div class="servivces"></div>
-    <div class="skills">
 
-    </div>
+
     <!-- ========== End Navbar ========== -->
 
     <div class="progress-parent">
