--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -3,12 +3,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    padding-top: 40px;
+    height: 100%;
 }
 
 .about-section .about-content {
     width: 90%;
-    height: 80vh;
     border-radius: 40px;
     display: flex;
     flex-direction: column;
@@ -67,12 +67,52 @@
 }
 
 .about-section .about-content .about-main .about-img img {
-    width: 400px;
-    height: 500px;
+    width: 350px;
+    height: 450px;
     object-fit: cover;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     /* display: none; */
-    box-shadow: 20px 20px 3px #bcc3cc;
+    box-shadow: 20px 20px 7px #bcc3cc8a;
+}
+
+.speciality {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 90%;
+}
+
+.speciality .speciality-header {
+    text-align: left;
+    padding: 20px 0;
+    font-size: 27px;
+    font-family: 'Poppins';
+    color: #748daa;
+    border-style: solid;
+    border-width: 0px 0px 1px;
+    width: 77%;
+    margin-bottom: 8%;
+    border-color: #748daa54;
+    text-transform: uppercase;
+}
+
+.speciality .speciality-body {
+    width: 100%;
+}
+
+.speciality .speciality-body .col h4 {
+    color: #748daa;
+    padding: 10px 0;
+    padding-bottom: 20px;
+    font-size: 20px;
+}
+
+.speciality .speciality-body .col p {
+    font-family: 'Poppins';
+    color: #748daa;
+    font-size: 14px;
+    text-align: left;
+    font-weight: 300;
 }
 
 @media screen and (max-width: 900px) {
