--- a/views/index.ejs
+++ b/views/index.ejs
@@ -132,22 +132,22 @@
             <div class="header-follow">
                 <ul>
                     <li>
-                        <a class="cursor-alter" href="https://github.com/teddyoweh"><i class="fa fa-github"></i></a>
+                        <a class="cursor-alter" href="https://github.com/teddyoweh">GITHUB</a>
                     </li>
                     <li>
-                        <a class="cursor-alter" href="mailto:teddy@teddyoweh.net"><i class="fa fa-envelope-o"></i></a>
+                        <a class="cursor-alter" href="mailto:teddy@teddyoweh.net">EMAIL</a>
                     </li>
                     <li>
-                        <a class="cursor-alter" href="https://www.linkedin.com/in/teddyoweh/"><i class="fa fa-linkedin "></i></a>
+                        <a class="cursor-alter" href="https://www.linkedin.com/in/teddyoweh/">LINKEDIN</a>
                     </li>
                     <li>
-                        <a class="cursor-alter" href="https://www.instagram.com/teddyoweh_/"><i class="fa fa-instagram "></i></a>
+                        <a class="cursor-alter" href="https://www.instagram.com/teddyoweh_/">INSTAGRAM</a>
                     </li>
                     <li>
-                        <a class="cursor-alter" href="https://twitter.com/teddyoweh_"><i class="fa fa-twitter "></i></a>
+                        <a class="cursor-alter" href="https://twitter.com/teddyoweh_">TWITTER</a>
                     </li>
                 </ul>
-                <p>Follow Me</p>
+
             </div>
         </div>
     </div>
